<resources>
    <string name="app_name">Yulia Ayu Rinjani</string>
    <string name="jenis_mobil">Jenis Mobil</string>
    <string name="tekan_poster_film_untuk_membuka_galeri">(Tekan poster mobil untuk membuka galeri)</string>
    <string name="biodata">BIODATA</string>
    <string name="biodata_mahasiswa">BIODATA MAHASISWA</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="hobi">Hobi</string>
    <string name="jurusan">Jurusan</string>
    <string name="avanza">Avanza</string>
    <string name="avanza_jenis">Honda</string>
    <string name="avanza_deskripsi">Toyota Avanza adalah mobil yang diproduksi di Indonesia oleh pabrikan Daihatsu, yang dipasarkan juga oleh Daihatsu dengan nama Daihatsu Xenia. Generasi pertama mobil ini diluncurkan pada Desember 2003.[1] Nama \\\"Avanza\\\" berasal dari bahasa Italia dan bahasa Spanyol avanzato/avanza, yang berarti peningkatan</string>
    <string name="xenia">Xenia</string>
    <string name="xenia_jenis">Honda</string>
    <string name="xenia_deskripsi">\"Daihatsu Xenia adalah nama mobil jenis MPV yang dirancang dan diproduksi bersama oleh Astra Daihatsu Motor dan Toyota-Astra Motor. ... Untuk suspensi depan, Xenia menggunakan MacPherson strut. Sedangkan pada varian 1.3 dan 1.5 telah ditambahkan stabilizer.Daihatsu Xenia adalah nama mobil jenis MPV yang dirancang dan diproduksi bersama oleh Astra Daihatsu Motor dan Toyota-Astra Motor Untuk suspensi depan, Xenia menggunakan MacPherson strut. Sedangkan pada varian 1.3 dan 1.5 telah ditambahkan stabilizer.\"</string>
    <string name="honda_hrv">Honda HRV</string>
    <string name="honda_hrv_jenis">Honda</string>
    <string name="honda_hrv_deskripsi">\"Honda HR-V adalah sebuah mobil SUV mini yang diproduksi oleh Honda pada tahun 1998 sampai 2006 lalu dari tahun 2014 sampai sekarang. Generasi pertama HR-V berbasis dari Logo dan dijual di Jepang dan beberapa negara di Asia-Pasifik dari tahun 1998 sampai 2006.\"</string>
    <string name="inova">Inova</string>
    <string name="inova_jenis">Toyota</string>
    <string name="inova_deskripsi">\"Toyota Kijang Innova adalah sebuah Mobil MPV buatan Toyota Motor Corporation yang diproduksi di Indonesia oleh Toyota-Astra Motor sejak tahun 2004.\"</string>
    <string name="civic">Civic</string>
    <string name="civic_jenis">Toyota</string>
    <string name="civic_deskripsi">\"Honda Civic adalah mobil yang diproduksi oleh Honda Motor Co. Pertama kali diperkenalkan pada Juli 1972 sebagai coupé 2 pintu, diikuti dengan versi hatchback 3 pintu pada September tahun itu juga. Mobil ini menganut sistem gerak roda depan, di mana mesinnya diletakan melintang, sehingga dapat menyediakan ruang interior yang cukup luas walaupun dimensi mobil terbilang kecil.\"</string>
    <string name="brio">Brio</string>
    <string name="brio_jenis">Toyota</string>
    <string name="brio_deskripsi">\" Brio adalah mobil berjenis hatchback subkompak 5 pintu yang diproduksi oleh Honda di Indonesia dan Thailand. Mobil ini diperkenalkan pada bulan Maret 2011.\"</string>
    <string name="bmw1">Bmw1</string>
    <string name="bmw1_jenis">Bmw</string>
    <string name="bmw_deskripsi">\"BMW X1 adalah SUV kompak berkategori mewah yang diproduksi oleh BMW dan BMW Brilliance. X1 tersedia dengan penggerak roda belakang (sDrive) atau all-wheel-drive (xDrive). Mobil konsepnya diperkenalkan pertama kali pada ajang Paris Motor Show 2008.\"</string>
    <string name="bmw2">Bmw2</string>
    <string name="bmw_jenis">Bmw</string>
    <string name="bmw2_deskripsi">\"The BMW X2 (model code F39) is a subcompact luxury crossover SUV produced by BMW. It was first showcased as the BMW Concept X2 at the 2016 Paris Motor Show,[3] with a production version unveiled in October 2017.\"</string>
    <string name="bmw3">Bmw3</string>
    <string name="bmw3_jenis">Bmw</string>
    <string name="bmw3_deskripsi">" \"BMW X3 merupakan mobil SUV medium mewah yang diproduksi oleh perusahaan Jerman, BMW sejak 2003.SUV ini berbasis dari platform BMW Seri 3, dan sekarang di generasi ketiga, BMW menyebut crossover ini sebagai Sport Activity \""</string>
    <string name="honda">Honda</string>
    <string name="toyota">Toyota</string>
    <string name="bmw">BMW</string>
</resources>