<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/white"
    android:orientation="horizontal"
    >


    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/heading"
        android:gravity="center"
        android:text="@string/biodata_mahasiswa"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/profile"
        android:layout_below="@id/heading"
        android:layout_marginTop="30dp"
        android:src="@drawable/profil"
        android:layout_width="410dp"
        android:layout_height="200dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/nama"
        android:layout_below="@+id/profile"
        android:text="@string/nama"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/nama1"
        android:layout_below="@+id/profile"
        android:text="Yulia Ayu Rinjani"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/alamat"
        android:layout_below="@+id/nama"
        android:text="@string/alamat"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/alamat1"
        android:layout_below="@+id/nama1"
        android:text="Selong"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/Hobi"
        android:layout_below="@+id/alamat"
        android:text="@string/hobi"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/hobi1"
        android:layout_below="@+id/alamat1"
        android:text="Belajar"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/nim"
        android:layout_below="@+id/Hobi"
        android:text="NIM"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/nim1"
        android:layout_below="@+id/hobi1"
        android:text="200602030"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/jrs"
        android:layout_below="@+id/nim"
        android:text="@string/jurusan"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/jurusan1"
        android:layout_below="@+id/nim1"
        android:text="Teknik Informatika"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</RelativeLayout>