<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_mobil"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginBottom="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_buka_honda"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/inova"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_toyota"
            android:padding="15dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/xenia"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_bmw"
            android:padding="20dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/bmwx1"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekan_poster_film_untuk_membuka_galeri"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginBottom="32dp"
        />
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_pindah_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/biodata"
            android:onClick="Pindahbiodata"
            />
    </LinearLayout>
</LinearLayout>